--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 .header{
   text-align: center;
-  border-top: 2px solid;
-  border-bottom: 2px solid;
+  border-top: 2px solid dodgerblue;
+  border-bottom: 2px solid dodgerblue;
   background-color: silver; 
 }
