--- a/style.css
+++ b/style.css
@@ -1,18 +1,84 @@
-body{
-  background-color: lightgray;
-  color: black;
-  margin: 5% 20%;
-  padding: 1%;
-  font-family: monospace, Ariel, serif;
-  color: black;
+body {
+  background: #EEE;
+  margin: 0;
+  padding: 0;
 }
-.mobile{
-  text-align: center;
+
+/* Navigation */
+
+.navigation {
+  box-sizing: border-box;
+  background-color: #A9A9A9;
+  overflow: auto;
+  padding: 18px 50px;
+  position: relative;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  color: #FFF;
+  display: inline-block;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  margin: 0;
+  padding: 15px 18px 10px 18px;
   text-transform: uppercase;
 }
-.header{
+
+.active {
+  color: #88CCF1;
+}
+
+/* Table */
+
+table {
+  height: 40%;
+  left: 10%;
+  margin: 20px auto;
+  overflow-y: scroll;
+  position: static;
+  width: 60%;
+}
+
+thead th {
+  background: #88CCF1;
+  color: #FFF;
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+tr {
+  background: #f4f7f8;
+  border-bottom: 1px solid #FFF;
+  margin-bottom: 5px;
+}
+
+th, td {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  padding: 20px;
+  text-align: left;
+  width: 33.3333%;
+}
+.footer{
   text-align: center;
-  border-top: 2px solid dodgerblue;
-  border-bottom: 2px solid dodgerblue;
-  background-color: silver; 
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+}
+
+.link{
+  font-family: 'Lato', sans-serif;
+  text-align: center;
 }
